# pisingerpy

./: README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml  python-app.yml
pisingerpy/: __init__.py
test/: test_pisingerpy.py
