requires = [
    "setuptools>=70",
    "cmake>=3.31.0",
    "wheel",
    "ninja",
    "pybind11>=2.13.6",
    "numpy>=2.1.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pisingerpy"
version = "0.1.0"
description = "Pisinger solvers for KP in Python"
authors = [{ name = "Alejandro Marrero", email = "amarrerd@ull.edu.es" }]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    "Intended Audience :: Science/Research",
    'Intended Audience :: Developers',
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    'Topic :: Scientific/Engineering',
    'Typing :: Typed',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]
dependencies = ["numpy>=2.4.2", "pybind11>=3.0.1"]

[dependency-groups]
dev = ["pybind11>=3.0.1", "pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.uv.extra-build-dependencies]
pisingerpy = ["pybind11"]
